# plugins-source-openssl

./: .gitignore  .gitmodules  .hgignore  DEVELOPER.md  LICENSE  README.markdown  SOLAR2DBUILD  build.sh  build_sdk.sh  metadata.json  mk_test_downloads
Corona/: build.settings  main.lua
Corona/Encryption/: build.settings  extern.lua  main.lua
Corona/General/: build.settings  main.lua
Corona/luasec/: build.settings  main.lua
android/: .gitignore  README.md  build-android.sh  build.sh  libplugin_openssl.cpp  libplugin_openssl.hpp  metadata.lua  settings.gradle
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/jni/: Android.mk  Application.mk
android/plugin_openssl/: CMakeLists.txt  build.gradle
docs/openssl/: index.markdown
ios/: build-ios.sh  build.sh  functions.c  metadata.lua
ios/App.xcodeproj/: project.pbxproj
ios/App.xcodeproj/xcshareddata/xcschemes/: App.xcscheme  Download Plugins.xcscheme
ios/OpensslTestApp.xcodeproj/: project.pbxproj
ios/Plugin.xcodeproj/: project.pbxproj
ios/Plugin.xcodeproj/xcshareddata/xcschemes/: plugin_library.xcscheme
ios/config/: 20-ios-tvos-cross.conf
ios/lib/include/openssl/: configuration.h
ios/lib/libcrypto.xcframework/: Info.plist
ios/lib/libssl.xcframework/: Info.plist
mac/: build.sh
mac/Plugin.xcodeproj/: project.pbxproj
osx/: build-mac.sh  build.sh
osx/Plugin.xcodeproj/: project.pbxproj
osx/Plugin.xcodeproj/xcshareddata/xcschemes/: plugin_library.xcscheme
osx/config/: 20-ios-tvos-cross.conf
sdk-corona-enterprise/: ReadMe.txt
sdk-corona-enterprise/shared/include/: CoronaEvent.h  CoronaLua.h
sdk-corona-enterprise/win32/lib/: CoronaLabs.Corona.Native.lib  lua.lib
tests/: run_server
tvos/: CoronaNative.xcconfig  build-tvos.sh  build.sh  metadata.lua
tvos/App.xcodeproj/: project.pbxproj
tvos/Corona_plugin_openssl.framework/: Corona_plugin_openssl  Info.plist
tvos/Corona_plugin_openssl.framework/_CodeSignature/: CodeResources
tvos/Corona_plugin_openssl.old/Corona_plugin_openssl/: Corona_plugin_openssl.h
tvos/Plugin.xcodeproj/: project.pbxproj
tvos/config/: 20-ios-tvos-cross.conf
tvos/lib/include/openssl/: configuration.h
tvos/lib/libcrypto.xcframework/: Info.plist
tvos/lib/libssl.xcframework/: Info.plist
win32/: Plugin.vcproj  Plugin.vcxproj  Plugin.vcxproj.filters  README.md  build-win32.bat
win32/lib/: libssl.lib
